# hangman-bot

./: .env.example  .flake8  .gitignore  Dockerfile
aws/: Dockerrun.aws.json
src/: bot.py  config.py  pyproject.toml
src/hangman/: hangman.py  word_generator.py  words.txt
src/telegram/: buttons.py  handlers.py  keyboards.py
src/telegram/message/: messages.py  utils.py
src/telegram/state/: storage.py  utils.py
